javadoc aggregated site + other stuff